@@ -184,10 +184,10 @@ home.shortcut=
 insert-newline-indent.shortcut=
 insert-newline.shortcut=ENTER
 isabelle-documentation.dock-position=right
-isabelle-find.dock-position=bottom
 isabelle-output.dock-position=bottom
 isabelle-output.height=174
 isabelle-output.width=412
+isabelle-query.dock-position=bottom
 isabelle-simplifier-trace.dock-position=bottom
 isabelle-sledgehammer.dock-position=bottom
 isabelle-symbols.dock-position=bottom
